# pdf-merger

./: .gitignore  LICENSE  Pipfile  README.md  merge.py  pyproject.toml  requirements.txt
app/: PDFMerger.py  merge.py
src/exceptions/: __init__.py  files_not_found_in_directory.py  path_not_exists.py
src/pdfmerge2/: __init__.py  app.py  merge.py  merger.py
src/pdfmerger/: PDFMerger.py  merge.py
tests/: conftest.py  test_merger.py
tests/helpers/: __init__.py  remove_created_items.py
