[tool.poetry]
name = "pdf-merger"
version = "0.1.0"
description = "CLI app that merges PDF files"
authors = ["Gasper3 <trzecik65@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^1.27.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
