[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pdfmerge2"
authors = [{name = "Gasper3", email = "trzecik65@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Gasper3/pdf-merger"

[project.scripts]
pdfmerge = "pdfmerge2.__main__:run"
